@@ -663,3 +663,94 @@ no type1 key \equiv      # could not find in ASM
 no type1 key \kappa      # could not find kappa
 no type1 key \RIGHTangle # could not find
 """
+
+latex_to_standard = {
+    r'\cong'            : ('psyr', 64),
+    r'\Delta'           : ('psyr', 68),
+    r'\Phi'             : ('psyr', 70),
+    r'\Gamma'           : ('psyr', 89),
+    r'\alpha'           : ('psyr', 97),
+    r'\beta'            : ('psyr', 98),
+    r'\chi'             : ('psyr', 99),
+    r'\delta'           : ('psyr', 100),
+    r'\varepsilon'      : ('psyr', 101),
+    r'\phi'             : ('psyr', 102),
+    r'\gamma'           : ('psyr', 103),
+    r'\eta'             : ('psyr', 104),
+    r'\iota'            : ('psyr', 105),
+    r'\varpsi'          : ('psyr', 106),
+    r'\kappa'           : ('psyr', 108),
+    r'\nu'              : ('psyr', 110),
+    r'\pi'              : ('psyr', 112),
+    r'\theta'           : ('psyr', 113),
+    r'\rho'             : ('psyr', 114),
+    r'\sigma'           : ('psyr', 115),
+    r'\tau'             : ('psyr', 116),
+    r'\upsilon'         : ('psyr', 117),
+    r'\varpi'           : ('psyr', 118),
+    r'\omega'           : ('psyr', 119),
+    r'\xi'              : ('psyr', 120),
+    r'\psi'             : ('psyr', 121),
+    r'\zeta'            : ('psyr', 122),
+    r'\sim'             : ('psyr', 126),
+    r'\leq'             : ('psyr', 163),
+    r'\infty'           : ('psyr', 165),
+    r'\clubsuit'        : ('psyr', 167),
+    r'\diamondsuit'     : ('psyr', 168),
+    r'\heartsuit'       : ('psyr', 169),
+    r'\spadesuit'       : ('psyr', 170),
+    r'\leftrightarrow'  : ('psyr', 171),
+    r'\leftarrow'       : ('psyr', 172),
+    r'\uparrow'         : ('psyr', 173),
+    r'\rightarrow'      : ('psyr', 174),
+    r'\downarrow'       : ('psyr', 175),
+    r'\pm'              : ('psyr', 176),
+    r'\geq'             : ('psyr', 179),
+    r'\times'           : ('psyr', 180),
+    r'\propto'          : ('psyr', 181),
+    r'\partial'         : ('psyr', 182),
+    r'\bullet'          : ('psyr', 183),
+    r'\div'             : ('psyr', 184),
+    r'\neq'             : ('psyr', 185),
+    r'\equiv'           : ('psyr', 186),
+    r'\approx'          : ('psyr', 187),
+    r'\ldots'           : ('psyr', 188),
+    r'\aleph'           : ('psyr', 192),
+    r'\Im'              : ('psyr', 193),
+    r'\Re'              : ('psyr', 194),
+    r'\wp'              : ('psyr', 195),
+    r'\otimes'          : ('psyr', 196),
+    r'\oplus'           : ('psyr', 197),
+    r'\oslash'          : ('psyr', 198),
+    r'\cap'             : ('psyr', 199),
+    r'\cup'             : ('psyr', 200),
+    r'\supset'          : ('psyr', 201),
+    r'\supseteq'        : ('psyr', 202),
+    r'\subset'          : ('psyr', 204),
+    r'\subseteq'        : ('psyr', 205),
+    r'\in'              : ('psyr', 206),
+    r'\notin'           : ('psyr', 207),
+    r'\angle'           : ('psyr', 208),
+    r'\nabla'           : ('psyr', 209),
+    r'\textregistered'  : ('psyr', 210),
+    r'\copyright'       : ('psyr', 211),
+    r'\texttrademark'   : ('psyr', 212),
+    r'\Pi'              : ('psyr', 213),
+    r'\prod'            : ('psyr', 213),
+    r'\surd'            : ('psyr', 214),
+    r'\sqrt'            : ('psyr', 214),
+    r'\cdot'            : ('psyr', 215),
+    r'\urcorner'        : ('psyr', 216),
+    r'\vee'             : ('psyr', 217),
+    r'\wedge'           : ('psyr', 218),
+    r'\Leftrightarrow'  : ('psyr', 219),
+    r'\Leftarrow'       : ('psyr', 220),
+    r'\Uparrow'         : ('psyr', 221),
+    r'\Rightarrow'      : ('psyr', 222),
+    r'\Downarrow'       : ('psyr', 223),
+    r'\Diamond'         : ('psyr', 224),
+    r'\langle'          : ('psyr', 225),
+    r'\Sigma'           : ('psyr', 229),
+    r'\sum'             : ('psyr', 229),
+
+}
